feat: Bulk Add Feature for 2 endpoint /todos and /projects
