# internal/handler/init.go
@@ -1,11 +1,16 @@
 package handler
 
-import "avei-todos-fiber/internal/handler/todo"
+import (
+	"avei-todos-fiber/internal/handler/project"
+	"avei-todos-fiber/internal/handler/todo"
+)
 
 func NewHandlers(
 	todoHandler todo.Handler,
+	projectHandler project.Handler,
 ) Handlers {
 	return Handlers{
-		TodoHandler: todoHandler,
+		TodoHandler:    todoHandler,
+		ProjectHandler: projectHandler,
 	}
 }
