# internal/handler/types.go
@@ -1,9 +1,13 @@
 package handler
 
-import "avei-todos-fiber/internal/handler/todo"
+import (
+	"avei-todos-fiber/internal/handler/project"
+	"avei-todos-fiber/internal/handler/todo"
+)
 
 type (
 	Handlers struct {
-		TodoHandler todo.Handler
+		TodoHandler    todo.Handler
+		ProjectHandler project.Handler
 	}
 )
