# internal/router/v1/router.go
@@ -2,6 +2,7 @@ package v1
 
 import (
 	"avei-todos-fiber/internal/handler"
+	"avei-todos-fiber/internal/router/v1/project"
 	"avei-todos-fiber/internal/router/v1/todo"
 
 	"github.com/gofiber/fiber/v2"
@@ -11,6 +12,7 @@ func InitV1Router(h *handler.Handlers) *fiber.App {
 	v1Router := fiber.New()
 
 	v1Router.Mount("/todos", todo.InitRouter(h))
+	v1Router.Mount("/projects", project.InitRouter(h))
 
 	return v1Router
 }
